--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -90,6 +90,11 @@ section.space{
 section.middle{
 	padding:50px 0 50px;
 }
+@media (max-width:768px){
+    section.middle{
+        padding: 20px 0;
+    }
+}
 section.space.min{
 	padding:60px 0 30px;
 }
