--- a/templates/custom.html
+++ b/templates/custom.html
@@ -253,7 +253,14 @@
                 <i class="bx bx-redo"></i>
                 Redo
               </button>
-
+              <button
+                type="button"
+                class="product-tab-info-link "
+                onclick="deleteSelection()"
+              >
+                <i class="fa fa-trash"></i>
+                Delete
+              </button>
 
 
 
