--- a/templates/custom.html
+++ b/templates/custom.html
@@ -1544,7 +1544,7 @@
                           </div>
                           <div class="AddTextBodyTap AddDesignBodyTap">
                             <div class="TextOptions">
-                              <div class="elementItem">
+                              <!-- <div class="elementItem">
                                 <div class="IconTitle">
                                   <img
                                     src="{% static 'assets/img/newImages/icons/fontType.png' %}"
@@ -1593,7 +1593,7 @@
                                 class="elementItem"
                                 style="justify-content: space-evenly"
                               >
-                                <!-- fontcolor , bordercolor, shadowcolor -->
+                                
                                 <div class="IconTitle">
                                   <span style="color: #eac97a">font color</span>
                                 </div>
@@ -1654,9 +1654,9 @@
                                     />
                                   </div>
                                 </div>
-                              </div>
+                              </div> -->
 
-                              <div class="DowenSection">
+                              <!-- <div class="DowenSection">
                                 <div class="elementItem_Solo">
                                   <div class="IconTitle" onclick="copy()">
                                     <img
@@ -1712,12 +1712,12 @@
                                     <span>cut</span>
                                   </div>
                                 </div>
-                              </div>
+                              </div> -->
                             </div>
 
                             <div class="AcordyBodyInputs">
                               <div class="row justify-content-center" style="">
-                                <div class="col-lg-3">
+                                <!-- <div class="col-lg-3">
                                   <div class="form_group">
                                     <label>Font Color</label>
                                     <div class="inputElement">
@@ -1792,8 +1792,13 @@
                                       placeholder="Name"
                                     />
                                   </div>
-                                </div>
+                                </div> -->
 
+                                <div class="col-lg-12">
+                                  <div class="DescriptionNots text-center">
+                                    <p>Coordinate timing that suits both you and the designer, confirm promptly, and be punctual. Prepare ahead to make the most of your meeting time.</p>
+                                  </div>
+                                </div>
                                 <div class="col-lg-12">
                                   <div class="tableTeam">
                                     <table
