--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -6612,3 +6612,13 @@ margin-bottom: 20px;
     background-color:#ffffff;
     color:#333c56;
 }
+
+.CartDescription{
+
+}
+.CartDescription p{
+    
+}
+.CartDescription p a{
+   color: #734512
+}
