--- a/templates/card.html
+++ b/templates/card.html
@@ -168,7 +168,7 @@
                                     </div>
                                     
 								</div>
-
+                                
 								<div class="ord_list_footer d-flex align-items-center justify-content-between br-top px-3">
 									<div class="col-xl-3 col-lg-3 col-md-4 olf_flex text-left px-0 py-2 br-right"><button  onclick="clear_card()" class="ft-medium fs-sm"><i class="ti-close mr-2"></i>Cleare Cart</button></div>
 									<div class="col-xl-9 col-lg-9 col-md-8 pr-0 py-2 olf_flex d-flex align-items-center justify-content-between">
@@ -178,7 +178,9 @@
 								</div>
 							</div>
 							<!-- End Order List -->
-							
+							<div class="CartDescription">
+                                    <p>For same day pickup option please contact our sister company <a href="#">IKE PRINT</a></p>
+                                </div>
                         </div>
 						
 						<!-- Sidebar -->
