--- a/templates/callEpertTwo.html
+++ b/templates/callEpertTwo.html
@@ -177,7 +177,7 @@ color: #000;
 																	<div class="col-lg-12">
 																		<div class="form-group">
 																			<label>Upload File</label>
-																			<input type="file" multiple class="form-control"  name="upload_file" placeholder="Subject" required>
+																			<input type="file" multiple class="form-control" accept=".pdf,.doc,.docx,.png,.jpg,.jpeg"  name="upload_file" placeholder="Subject">
 																		</div>
 																	</div>
 																	<div class="col-lg-12">
