--- a/templates/CallSeniorDesigner.html
+++ b/templates/CallSeniorDesigner.html
@@ -176,7 +176,7 @@ color: #000;
 																	<div class="col-lg-12">
 																		<div class="form-group">
 																			<label>Upload File</label>
-																			<input type="file" class="form-control" multiple name="upload_file" accept=".pdf,.doc,.docx,.png,.jpg,.jpeg" placeholder="Subject" required>
+																			<input type="file" class="form-control" multiple name="upload_file" accept=".pdf,.doc,.docx,.png,.jpg,.jpeg" placeholder="Subject">
 																		</div>
 																	</div>
 																	<div class="col-lg-12">
