--- a/templates/custom.html
+++ b/templates/custom.html
@@ -36,8 +36,7 @@
     <!-- ============================================================== -->
     <!-- Preloader - style you can find in spinners.css -->
     <!-- ============================================================== -->
-    <div class="preloader"></div>
-
+<div class="preloaderPage"></div>
     <!-- ============================================================== -->
     <!-- Main wrapper - style you can find in pages.scss -->
     <!-- ============================================================== -->
@@ -3408,5 +3407,4 @@ rowContent += `
 
   </body>
 
-  <!-- Mirrored from themezhub.net/kumo-demo-2/kumo/shop-single-v4.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 31 Oct 2023 17:06:12 GMT -->
 </html>
