--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -799,6 +799,19 @@ img{
 .loadDesignItem img{
     
 }
+
+.preloaderPage {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 999999;
+    background-color: #252525;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-image: url(../img/newImages/1.svg);
+}
 @media(max-width:768px){
 
     .btn-group-vertical{
