--- a/templates/custom.html
+++ b/templates/custom.html
@@ -36,7 +36,7 @@
     <!-- ============================================================== -->
     <!-- Preloader - style you can find in spinners.css -->
     <!-- ============================================================== -->
-<div class="preloaderPage"></div>
+<div class="preloaderPage" style="display:none;"></div>
     <!-- ============================================================== -->
     <!-- Main wrapper - style you can find in pages.scss -->
     <!-- ============================================================== -->
