--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -807,7 +807,7 @@ img{
     width: 100%;
     height: 100%;
     z-index: 999999;
-    background-color: #252525;
+    background-color: #252525c9;
     background-position: center center;
     background-repeat: no-repeat;
     background-image: url(../img/newImages/1.svg);
