--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -810,7 +810,7 @@ img{
     background-color: #252525c9;
     background-position: center center;
     background-repeat: no-repeat;
-    background-image: url(../img/newImages/1.svg);
+    background-image: url(../img/newImages/loading-2.gif);
 }
 @media(max-width:768px){
 
